# buddylink-crate

./: .ammanrc.js  .gitignore  Cargo.toml  README.md  package.json
.amman/accounts/: 3Q6dz8cLd4BW1kyuGyUaS7qhTtFP7tGS55Y7fybCUfNy.json  4jHbHkwjJoZgDBsx774LAmmqxPuGwk65SVdV6yr5Xjsm.json  9xNqfpwRUEyqpURcgNZWFUrurrSRtdQTYpUQGbpJXWpp.json  9zE4EQ5tJbEeMYwtS2w8KrSHTtTW4UPqwfbBSEkUrNCA.json  AsY9QzsVwu6KX9N5Yy85M5jaMYitPYrAC7vuCY6A3YKf.json  C2LZp5DNf6JsjEWoiQiS1jXQPopi3y4K2H7zN6App7mH.json  C4yA9kJKohWhmGKAMGhJWRB827UdR6aVRUu82mGnmNwV.json  CMLckMKGfa5MTeovcfr9Rhgg31rFcAGS9ZKMXigaHMWJ.json  CRY1kbdXSDkK2fHP8aPMCH3dtwtWBpdc81tyt8XVVunH.json  CbR6Aa6btszwFJwKD9xJWYeQnvhFAPq3n9aPuRz2s6Gw.json  DK1FtDDy2RkydDuhprUNKmsyVv8JQb5YDrUZe3GB8ZFc.json  DLCAgJho2Fm3g2SEWHzfiuJdLMRhqUVDWtssqhCeCdYr.json  GZ3oVbxW1LY26LsbZKJEqbv7AXiJGsMtW9emm4wdexN9.json  HFnGHHTEKdggiHVFYEs1VAKKmjPvoD31HQsApkZqHqEx.json  PwDiXFxQsGra4sFFTT8r1QWRMd4vfumiWC1jfWNfdYT.json  Vygga65LjTWs7kJR9Z7JbCpBpcuc7Tn8LkjXoxHomRQ.json
src/: constants.rs  lib.rs  utils.rs
src/cpi/: transfer_reward.rs  validate_referrer.rs
src/instruction/: mod.rs  transfer_reward.rs  validate_referrer.rs
src/tests/: test_validate.rs
