[package]
name = "buddy-link"
description = "Library to interact with the BuddyLink on-chain referral system"
version = "0.4.0"
edition = "2021"
license = "MIT"

[lib]
name = "buddy_link"
path = "src/lib.rs"

[features]
mainnet = []
devnet = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = { version = "1.17.33" }
borsh = "0.10.3"
ahash = "=0.8.11"

[dev-dependencies]
solana-client = "1.18.1"
solana-sdk = "1.18.1"
lazy_static = "1.4.0"
spl-associated-token-account = "2.0.0"

[[test]]
name = "test_validate"
path = "src/tests/test_validate.rs"
